# python

./: .gitignore  README.md  test.ipynb
hs_intro_to_mlops/: .gitignore  README.md  docker-compose.yml
hs_intro_to_mlops/.dvc/: config
hs_intro_to_mlops/modeling/: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  retrain.py  train.py
hs_intro_to_mlops/modeling/data/: features.parquet.dvc
hs_intro_to_mlops/modeling/src/pipeline/: config.py  data.py  trainer.py
hs_intro_to_mlops/serving/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
hs_intro_to_mlops/serving/app/: main.py  model.py  schemas.py
hs_intro_to_mlops/serving/examples/: batch_example.json  input_example.json
hs_intro_to_mlops/serving/tests/: test_api.py
