[project]
name = "polymarket-modeling"
version = "0.1.0"
description = "Training pipeline for Polymarket YES/NO resolution prediction (LightGBM + Optuna + MLflow)"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "optuna>=3.6",
    "scikit-learn>=1.4",
    "mlflow>=2.13",
    "pandas>=2.2",
    "pyarrow>=16",
    "matplotlib>=3.8",
    "omegaconf>=2.3",
    "joblib>=1.4",
    "dvc[gdrive]>=3.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
