[project]
name = "polymarket-serving"
version = "0.1.0"
description = "FastAPI inference service for the Polymarket YES/NO classifier"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "joblib>=1.4",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
